<resources>
    <string name="app_name">Gandara</string>
    <string name="title_activity_welcome">Gandara</string>
    <string name="next">LANJUT</string>
    <string name="skip">LEWATI</string>
    <string name="start">MULAI</string>
    <string name="previous">SEBELUM</string>
    <string name="slide_4_title">Gandara</string>
    <string name="slide_4_desc">Aplikasi yang mempermudah kalian untuk menambah pengetahuan tentang musik nusantara yang dapat dimainkan oleh gitar</string>
    <string name="slide_1_title">Belajar Gitar</string>
    <string name="slide_1_desc">Gandara adalah aplikasi pembelajaran yang dilengkapi oleh audio agar belajar gitar menjadi lebih mudah</string>
    <string name="slide_2_title">Kuis</string>
    <string name="slide_2_desc">Kuis yang siap menantang kamu dalam mengasah kemampuan bermain gitar dan pengetahuan lagu nusantara</string>
    <string name="slide_3_title">Chord Daerah</string>
    <string name="slide_3_desc">Gandara menyediakan puluhan chord lagu daerah di Indonesia</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="About">About</string>
    <string name="nusantara">NUSANTARA</string>
    <string name="internasional">INTERNASIONAL</string>
    <string name="cek">Cek Jawaban</string>
    <string name="soal">Masukkan jawaban di sini</string>
    <string name="akor_a">A</string>
    <string name="akor_akres">A#</string>
    <string name="akor_b">B</string>
    <string name="akor_c">C</string>
    <string name="akor_ckres">C#</string>
    <string name="akor_d">D</string>
    <string name="akor_dkres">D#</string>
    <string name="akor_e">E</string>
    <string name="akor_f">F</string>
    <string name="akor_fkres">F#</string>
    <string name="akor_g">G</string>
    <string name="akor_gkres">G#</string>
    <string name="akor_a_minor">Am</string>
    <string name="akor_akres_minor">A#m</string>
    <string name="akor_b_minor">Bm</string>
    <string name="akor_c_minor">Cm</string>
    <string name="akor_ckres_minor">C#m</string>
    <string name="akor_d_minor">Dm</string>
    <string name="akor_dkres_minor">D#m</string>
    <string name="akor_e_minor">Em</string>
    <string name="akor_f_minor">Fm</string>
    <string name="akor_fkres_minor">F#m</string>
    <string name="akor_g_minor">Gm</string>
    <string name="akor_gkres_minor">G#m</string>
    <string name="akor_a_5">A5</string>
    <string name="akor_akres_5">A#5</string>
    <string name="akor_b_5">B5</string>
    <string name="akor_c_5">C5</string>
    <string name="akor_ckres_5">C#5</string>
    <string name="akor_d_5">D5</string>
    <string name="akor_dkres_5">D#5</string>
    <string name="akor_e_5">E5</string>
    <string name="akor_f_5">F5</string>
    <string name="akor_fkres_5">F#5</string>
    <string name="akor_g_5">G5</string>
    <string name="akor_gkres_5">G#5</string>
    <string name="akor_a_7">A7</string>
    <string name="akor_b_7">B7</string>
    <string name="akor_c_7">C7</string>
    <string name="akor_d_7">D7</string>
    <string name="akor_e_7">E7</string>
    <string name="akor_f_7">F7</string>
    <string name="akor_g_7">G7</string>
    <string name="akor_akres_7">A#7</string>
    <string name="akor_ckres_7">C#7 </string>
    <string name="akor_dkres_7">D#7</string>
    <string name="akor_fkres_7">F#7</string>
    <string name="akor_gkres_7">G#7</string>
    <string name="akor_akres_for_chord">A# / Bb / Bes</string>
    <string name="akor_ckres_for_chord">C# / Db / Des</string>
    <string name="akor_dkres_for_chord">D# / Eb / Ebes</string>
    <string name="akor_fkres_for_chord">F# / Gb / Ges</string>
    <string name="akor_gkres_for_chord">G# / Ab / Aes</string>
    <string name="akor_akres_minor_for_chord">A#m / Bbm / Besm</string>
    <string name="akor_ckres_minor_for_chord">C#m / Dbm / Desm</string>
    <string name="akor_dkres_minor_for_chord">D#m / Ebm / Ebesm</string>
    <string name="akor_fkres_minor_for_chord">F#m / Gbm / Gesm</string>
    <string name="akor_gkres_minor_for_chord">G#m / Abm / Aesm</string>
    <string name="akor_akres_5_for_chord">A#5 / Bb5 / Bes5</string>
    <string name="akor_ckres_5_for_chord">C#5 / Db5 / Des5</string>
    <string name="akor_dkres_5_for_chord">D#5 / Eb5 / Ebes5</string>
    <string name="akor_fkres_5_for_chord">F#5 / Gb5 / Ges5</string>
    <string name="akor_gkres_5_for_chord">G#5 / Ab5 / Aes5</string>
    <string name="akor_akres_7_for_chord">A#7 / Bb7 / Bes7</string>
    <string name="akor_ckres_7_for_chord">C#7 / Db7 / Des7</string>
    <string name="akor_dkres_7_for_chord">D#7 / Eb7 / Ebes7</string>
    <string name="akor_fkres_7_for_chord">F#7 / Gb7 / Ges7</string>
    <string name="akor_gkres_7_for_chord">G#7 / Ab7 / Aes7</string>
    <string name="penjelasan_akor">Akor ini bersifat universal bisa digunakan untuk lagu daerah maupun internasional</string>
    <string name="tempo_14">1/4</string>
    <string name="tempo_12">1/2</string>
    <string name="tempo_34">3/4</string>
    <string name="tempo_44">4/4</string>
    <string name="tempo_18">1/8</string>
    <string name="tempo_116">1/16</string>
    <string name="penjelasan_14">Nilai 1/4 berarti bunyikan empat nada dalam empat ketukan</string>
    <string name="penjelasan_12">Nilai 1/2 berarti bunyikan dua nada dalam empat ketukan</string>
    <string name="penjelasan_44">Nilai 4/4 berarti bunyikan satu nada dalam empat ketukan</string>
    <string name="penjelasan_18">Nilai 1/8 berarti bunyikan delapan nada dalam empat ketukan</string>
    <string name="penjelasan_116">Nilai 1/16 berarti bunyikan enambelas nada dalam empat ketukan</string>
    <string name="play">PLAY</string>
    <string name="interval">Interval Nada</string>
    <string name="judul_major">Major</string>
    <string name="penjelasan_major">Tangga nada major adalah salah satu tangga nada diatonis, tangga nada ini tersusun oleh delapan not.</string>
    <string name="interval_major">1 - 1 - 1/2 - 1 - 1 - 1 - 1/2</string>
    <string name="contoh_major">C</string>
    <string name="contoh_major_1">-</string>
    <string name="contoh_major_2">D</string>
    <string name="contoh_major_3">E</string>
    <string name="contoh_major_4">F</string>
    <string name="contoh_major_5">G</string>
    <string name="contoh_major_6">A</string>
    <string name="contoh_major_7">B</string>
    <string name="contoh_major_8">C\'</string>
    <string name="judul_minor">Minor</string>
    <string name="penjelasan_minor">Tangga nada minor adalah salah satu tanga nada diatonis.Skala minor dapat dicari dengan melihat nada ke 6 pada skala mayor.</string>
    <string name="interval_minor">1 - 1/2 - 1 - 1 - 1/2 - 1 - 1</string>
    <string name="contoh_minor">A</string>
    <string name="contoh_minor_1">-</string>
    <string name="contoh_minor_2">B</string>
    <string name="contoh_minor_3">C</string>
    <string name="contoh_minor_4">D</string>
    <string name="contoh_minor_5">E</string>
    <string name="contoh_minor_6">F</string>
    <string name="contoh_minor_7">G</string>
    <string name="contoh_minor_8">A\'</string>
    <string name="judul_pentatonik_major">Pentatonik Major</string>
    <string name="penjelasan_pentatonik_major">Tangga nada pentatonik major sebenarnya adalah tangga nada major biasa. Namun, dihilangkan dua nada yaitu nada keempat dan ketujuh sehingga tersisa lima nada (penta)</string>
    <string name="contoh_penta_mayor">C</string>
    <string name="contoh_penta_mayor_1">-</string>
    <string name="contoh_penta_mayor_2">D</string>
    <string name="contoh_penta_mayor_3">E</string>
    <string name="contoh_penta_mayor_4">G</string>
    <string name="contoh_penta_mayor_5">A</string>
    <string name="contoh_penta_mayor_6">C\'</string>
    <string name="judul_pentatonik_minor">Pentatonik Minor</string>
    <string name="penjelasan_pentatonik_minor">Tangga nada pentatonik minor sebenarnya adalah tangga nada minor biasa. Namun, dihilangkan dua nada yaitu nada kedua dan keenam sehingga tersisa lima nada (penta)</string>
    <string name="contoh_penta_minor">A</string>
    <string name="contoh_penta_minor_1">-</string>
    <string name="contoh_penta_minor_2">C</string>
    <string name="contoh_penta_minor_3">D</string>
    <string name="contoh_penta_minor_4">E</string>
    <string name="contoh_penta_minor_5">G</string>
    <string name="contoh_penta_minor_6">A\'</string>
    <string name="judul_kromatik">Kromatik</string>
    <string name="penjelasan_kromatik">Tangga nada kromatik merupakan kumpulan semua nada dari dalam musik karena nada selalu berulang oktafnya, di mana semua nadanya berjarak 1/2</string>
    <string name="contoh_kromatik">C</string>
    <string name="contoh_kromatik_1">-</string>
    <string name="contoh_kromatik_2">D</string>
    <string name="contoh_kromatik_3">D#</string>
    <string name="contoh_kromatik_4">E</string>
    <string name="contoh_kromatik_5">F</string>
    <string name="contoh_kromatik_6">F#</string>
    <string name="contoh_kromatik_7">G</string>
    <string name="contoh_kromatik_8">G#</string>
    <string name="contoh_kromatik_9">A</string>
    <string name="contoh_kromatik_10">A#</string>
    <string name="contoh_kromatik_11">B</string>
    <string name="contoh_kromatik_12">C\'</string>
    <string name="judul_madenda_sunda">Madenda Sunda</string>
    <string name="penjelasan_madenda_sunda">Tangga nada ini berasal dari gamelan sunda atau degung. Tangga nada ini biasanya digunakan untuk mengiringi lagu daerah yang berasal dari Sunda. Tangga nada ini berjarak 1 - 1 - 1/2 - 2 - 1/2 - 2. </string>
    <string name="judul_pelog_jawa">Pelog Jawa</string>
    <string name="penjelasan_pelog_jawa">Tangga nada pelog Jawa adalah kumpulan lima nada yang dipolakan dalam sebuah kombinasi harmonis dalam musik Jawa (Indonesia). Jaraknya adalah 1 - 1 1/2 - 1/2 - 1 - 2</string>
    <string name="judul_pelog_bali">Pelog Bali</string>
    <string name="penjelasan_pelog_bali">Tangga nada pelog Bali adalah kumpulan lima nada yang dipolakan dalam sebuah kombinasi harmonis dalam musik Bali (Indonesia). Jaraknya adalah 1 - 1/2 - 1 - 2 - 1/2</string>
    <string name="judul_pelog_barang">Pelog Barang</string>
    <string name="penjelasan_pelog_barang">Pelog barang adalah bentuk lain dari skala pelog Jawa. Skala ini tidak memakai nada satu atau nada dasar (Do)</string>
    <string name="judul_pelog_bem">Pelog Bem</string>
    <string name="penjelasan_pelog_bem">Pelog Bem adalah bentuk lain dari skala pelog Jawa. Skala ini tidak memakai nada tujuh atau nada (Si) </string>
    <string name="larghissimo">Larghissimo = 20 - 39 Bpm</string>
    <string name="judul_bungo_jeumpa">Bungo Jeumpa</string>
    <string name="bungo_jeumpa_1_lirik">Bungo Jeumpa bungo Jeumpa</string>
    <string name="bungo_jeumpa_2_lirik">meugah di aceh</string>
    <string name="bungo_jeumpa_3_lirik">bungong teu leubeh teuleubeh indah lagoina.</string>
    <string name="bungo_jeumpa_4_lirik">Puteh kuneng</string>
    <string name="bungo_jeumpa_5_lirik">Meujampu mirah</string>
    <string name="bungo_jeumpa_6_lirik">bungong si ulah-siulah indah lagoina</string>
    <string name="bungo_jeumpa_7_lirik">harom that meubee</string>
    <string name="bungo_jeumpa_8_lirik">Menyo ta tem com</string>
    <string name="bungo_jeumpa_9_lirik">leupah that harom lah harom si bungong jeumpa</string>
    <string name="bungo_jeumpa_10_lirik">lam sinar buleun lam sinar buleun</string>
    <string name="bungo_jeumpa_11_lirik">Angen peu ayoon</string>
    <string name="bungo_jeumpa_12_lirik">nuroeh si oen-oen, si oen-oen yang mala-mala</string>
    <string name="judul_dewa_ayu">Dewa Ayu</string>
    <string name="dewa_ayu_1_lirik">Dewa ayu ya ya dewa ayu</string>
    <string name="dewa_ayu_2_lirik">margi I Ratu mesolah mesolah mabulu wangsul</string>
    <string name="dewa_ayu_3_lirik">Hulu hulu wangsul ya ya hulu hulu wangsul</string>
    <string name="dewa_ayu_4_lirik">Telan jake cara Jawa memayog cara den bukit</string>
</resources>