<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="160dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginStart="25dp"
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:text="@string/akor_f_minor"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/dewa_ayu_1_lirik"
                    android:textSize="16sp"
                    android:textColor="#000000"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginStart="55dp"
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:text="@string/akor_g"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        />

                    <TextView
                        android:layout_marginStart="115dp"
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:text="@string/akor_f_minor"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/dewa_ayu_2_lirik"
                    android:textSize="16sp"
                    android:textColor="#000000"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginStart="25dp"
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:text="@string/akor_f_minor"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/dewa_ayu_3_lirik"
                    android:textSize="16sp"
                    android:textColor="#000000"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginStart="35dp"
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:text="@string/akor_f_minor"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        />

                    <TextView
                        android:layout_marginStart="25dp"
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:text="@string/akor_g"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        />

                    <TextView
                        android:layout_marginStart="95dp"
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:text="@string/akor_f_minor"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/dewa_ayu_4_lirik"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:layout_marginBottom="15dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#11b5a6">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:text="@string/judul_dewa_ayu"
        android:textColor="#ffffff"
        android:gravity="center"
        android:layout_marginTop="45dp"
        android:textSize="35sp"
        android:textStyle="bold"
        />
    </LinearLayout>

</RelativeLayout>