<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="#e03531"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager_major"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />

            <LinearLayout
                android:id="@+id/layoutDotsmajor"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dots_height"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/dots_margin_bottom"
                android:gravity="center"
                android:orientation="horizontal">

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha=".5"
                android:layout_above="@id/layoutDotsmajor"
                android:background="@android:color/black" />

            <Button
                android:onClick="btnNext"
                android:id="@+id/btn_next_major"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:text="@string/next"
                android:textColor="@android:color/black" />

            <Button
                android:visibility="gone"
                android:onClick="btnBackPrevious"
                android:id="@+id/btn_previous_major"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:background="@null"
                android:text="@string/previous"
                android:textColor="@android:color/black" />

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:layout_marginTop="10dp"
        android:id="@+id/balikmajor"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back" />

</RelativeLayout>